pz5/log.txt
[ 2260.813520] LAB5: PROBE ENTERED
[ 2260.813572] lab5_pci_net: probe of 0000:00:01.0 failed with error -5
[ 2311.866736] LAB5: PROBE ENTERED
[ 2311.867224] lab5_pci_net: probe of 0000:00:00.0 failed with error -5
[ 2311.867656] LAB5: PROBE ENTERED
[ 2311.868055] lab5_pci_net: probe of 0000:00:01.0 failed with error -5
[ 2406.756128] LAB5: PROBE ENTERED
[ 2406.756212] lab5_pci_net: probe of 0000:00:00.0 failed with error -5
[ 2406.756250] LAB5: PROBE ENTERED
[ 2406.756322] lab5_pci_net: probe of 0000:00:01.0 failed with error -5

make -C /lib/modules/5.15.0-164-generic/build M=/home/drivers/drivers/pz5 modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-164-generic'
  CC [M]  /home/drivers/drivers/pz5/main.o
  MODPOST /home/drivers/drivers/pz5/Module.symvers
  CC [M]  /home/drivers/drivers/pz5/main.mod.o
  LD [M]  /home/drivers/drivers/pz5/main.ko
  BTF [M] /home/drivers/drivers/pz5/main.ko
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-164-generic'

make -C /lib/modules/5.15.0-164-generic/build M=/home/drivers/drivers/pz5 modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-164-generic'
  CC [M]  /home/drivers/drivers/pz5/main.o
/home/drivers/drivers/pz5/main.c: In function ‘lab5_probe’:
/home/drivers/drivers/pz5/main.c:88:1: warning: label ‘err_free’ defined but not used [-Wunused-label]
   88 | err_free:
      | ^~~~~~~~
  MODPOST /home/drivers/drivers/pz5/Module.symvers
  CC [M]  /home/drivers/drivers/pz5/main.mod.o
  LD [M]  /home/drivers/drivers/pz5/main.ko
  BTF [M] /home/drivers/drivers/pz5/main.ko
Skipping BTF generation for /home/drivers/drivers/pz5/main.ko due to unavailability of vmlinux
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-164-generic'

[ 3715.807681] RIP: 0033:0x7f14f0c28b5b
[ 3715.807684] Code: 73 01 c3 48 8b 0d d5 32 0f 00 f7 d8 64 89 01 48 83 c8 ff c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa b8 b0 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d a5 32 0f 00 f7 d8 64 89 01 48
[ 3715.807685] RSP: 002b:00007ffde197d908 EFLAGS: 00000206 ORIG_RAX: 00000000000000b0
[ 3715.807688] RAX: ffffffffffffffda RBX: 000055a3c780c760 RCX: 00007f14f0c28b5b
[ 3715.807689] RDX: 000000000000000a RSI: 0000000000000800 RDI: 000055a3c780c7c8
[ 3715.807691] RBP: 0000000000000000 R08: 0000000000000000 R09: 0000000000000000
[ 3715.807692] R10: 00007f14f0cc0ac0 R11: 0000000000000206 R12: 00007ffde197db60
[ 3715.807693] R13: 000055a3c780c2a0 R14: 00007ffde197f8f0 R15: 000055a3c780c760
[ 3715.807698]  </TASK>
[ 3715.807699] ---[ end trace bc0de7f8c4eee00b ]---


[ 3809.121087] LAB5: remove entered
[ 3809.128898] LAB5: remove entered
[ 3827.088633] LAB5: probe entered
[ 3827.089310] LAB5: MAC 82:2a:c4:1b:89:16
[ 3827.091759] LAB5: probe success
[ 3827.094595] LAB5: probe entered
[ 3827.095090] LAB5: MAC 46:ae:bb:7b:31:96
[ 3827.095898] LAB5: probe success
[ 3827.111804] lab5_pci_net 0000:00:00.0 enp0s0: renamed from eth0
[ 3827.119512] lab5_pci_net 0000:00:01.0 enp0s1f0: renamed from eth1

1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
2: enp0s3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
    link/ether 08:00:27:76:c4:55 brd ff:ff:ff:ff:ff:ff
13: enp0s0: <BROADCAST,MULTICAST> mtu 1500 qdisc noop state DOWN mode DEFAULT group default qlen 1000
    link/ether 4a:5a:65:d6:f5:e9 brd ff:ff:ff:ff:ff:ff
14: enp0s1f0: <BROADCAST,MULTICAST> mtu 1500 qdisc noop state DOWN mode DEFAULT group default qlen 1000
    link/ether 3a:63:ca:07:4e:28 brd ff:ff:ff:ff:ff:ff


Lab5 app started
Check dmesg and ip link

[ 4722.713151] LAB5: probe entered
[ 4722.713181] LAB5: MAC 7e:2c:84:03:0d:6d
[ 4722.715543] LAB5: probe success
[ 4722.719851] LAB5: probe entered
[ 4722.719877] LAB5: MAC 56:01:3b:bd:22:b5
[ 4722.720058] LAB5: probe success
[ 4722.727054] lab5_pci_net 0000:00:00.0 enp0s0: renamed from eth0
[ 4722.744134] lab5_pci_net 0000:00:01.0 enp0s1f0: renamed from eth1

1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
2: enp0s3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
    link/ether 08:00:27:76:c4:55 brd ff:ff:ff:ff:ff:ff
15: enp0s0: <BROADCAST,MULTICAST> mtu 1500 qdisc noop state DOWN mode DEFAULT group default qlen 1000
    link/ether 7e:2c:84:03:0d:6d brd ff:ff:ff:ff:ff:ff
16: enp0s1f0: <BROADCAST,MULTICAST> mtu 1500 qdisc noop state DOWN mode DEFAULT group default qlen 1000
    link/ether 56:01:3b:bd:22:b5 brd ff:ff:ff:ff:ff:ff


make -C /lib/modules/5.15.0-164-generic/build M=/home/drivers/drivers/pz5 modules
make[1]: Entering directory '/usr/src/linux-headers-5.15.0-164-generic'
  CC [M]  /home/drivers/drivers/pz5/main.o
/home/drivers/drivers/pz5/main.c:17:12: error: conflicting types for ‘dev_open’; have ‘int(struct inode *, struct file *)’
   17 | static int dev_open(struct inode *inode, struct file *file) {
      |            ^~~~~~~~
In file included from /home/drivers/drivers/pz5/main.c:3:
./include/linux/netdevice.h:2991:5: note: previous declaration of ‘dev_open’ with type ‘int(struct net_device *, struct netlink_ext_ack *)’
 2991 | int dev_open(struct net_device *dev, struct netlink_ext_ack *extack);
      |     ^~~~~~~~
make[2]: *** [scripts/Makefile.build:297: /home/drivers/drivers/pz5/main.o] Error 1
make[1]: *** [Makefile:1930: /home/drivers/drivers/pz5] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-5.15.0-164-generic'
make: *** [Makefile:4: all] Error 2



RAW HEX: 00 00 00 00 00 00 00 00 00 00 00 00 4e 20 3a f8 1f 26 6f 20 77 6f 72 6c
ASCII: \x00 \x00 \x00 \x00 \x00 \x00 \x00 \x00 \x00 \x00 \x00 \x00 N   : \xf8 \x1f & o   w o r l
